Alignment of nav and blog posts fix

--- a/css/style.scss
+++ b/css/style.scss
@@ -237,7 +237,7 @@ article {
 }
 
 .blog-posts {
-	max-width: 741px;
+	max-width: 803px;
 	margin: 0 auto;
 }
 
